{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "b81971f3-6d13-48b0-9764-3b055131bda1",
            "actions": [
                {
                    "name": "PointerPress",
                    "type": "Button",
                    "id": "f165d272-f625-4bda-b8f7-12d705d4c29d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "2372db0d-795c-4001-aed4-1cec82f05d83",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6aebe1a4-7536-4a14-80cd-8a53fc41df86",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bdd0c64-a756-4504-8cbe-ddca01cd8f48",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}